--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <meta name="description"
         content="Try CPS Test Unblocked and improve you clicking speed.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://cps-test-unblocked.github.io/" />
+    <link rel="canonical" href="https://cps-test-unblock.github.io/" />
 
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="https://iskills.com/favicon.ico">
+
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-YPZPKDYTT6"></script>
@@ -112,18 +111,7 @@
         }
 
         /* Main Content */
-        main {
-            flex: 1;
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 0 1rem;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-        }
+        
 
         main h1 {
             margin-bottom: 1rem;
@@ -300,6 +288,8 @@
             font-weight: 600;
             letter-spacing: 0.5px;
             box-shadow: 0 4px 15px rgba(120, 56, 243, 0.2);
+            width: 50px;
+            padding: 15px
         }
 
         .timer-btn:hover {
