--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
             <div class="stat">CPS: <span id="clicks">0.00</span></div>
         </div>
 
-        <div id="clickArea">Click here to Start CPS Test</div>
+        <div id="clickArea">Click here to Start CPS Test Unblocked</div>
     </div>
 
     <div class="modal" id="resultModal">
@@ -661,7 +661,7 @@
             timerTxt.textContent = duration.toFixed(3);
             scoreTxt.textContent = '0';
             clicksTxt.textContent = '0.00';
-            clickArea.textContent = 'Click here to Start CPS Test';
+            clickArea.textContent = 'Click here to Start CPS Test Unblocked';
             clickArea.classList.remove('result-display');
         }
 
@@ -757,7 +757,7 @@
     </script>
         <article>
         <section>
-            <h2>What is the CPS Test?</h2>
+            <h2>What is the CPS Test Unblocked?</h2>
             <p>The CPS (Clicks Per Second) Test is a tool designed to measure how fast a user can click their mouse within a specific time frame. It calculates the average number of clicks per second by dividing the total clicks by the elapsed time.</p>
         </section>
         <section>
@@ -789,7 +789,7 @@
             <p>Improving your CPS can significantly enhance your gaming performance. For example, in Minecraft PvP (Player vs. Player), players with a higher CPS can perform advanced techniques like block hitting and combo attacks more effectively.</p>
         </section>
         <section>
-            <h2>How to Use the CPS Test Tool</h2>
+            <h2>How to Use the CPS Test Unblocked Tool</h2>
             <ol>
                 <li>Visit the CPS Test Unblocked website.</li>
                 <li>Select your desired time interval.</li>
