--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         header {
             background-color: #ffffff;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            padding: 1rem;
+/*             padding: 1rem; */
             position: sticky;
             top: 0;
             z-index: 1000;
